--- a/styles/main.css
+++ b/styles/main.css
@@ -19,9 +19,10 @@ h1, h2, h3, h4, h5, h6 {
 
 body, html {
     overflow-x: hidden;
+/*    background: #fdfdfd;*/
+/*    font-family:  "Helvetica", "Arial", sans-serif;*/
     font-family: "Harmony", "Helvetica", "Arial", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased; 
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup,
@@ -31,13 +32,36 @@ menu, nav, section {
 
 header{
     position: fixed !important;
-    height: 0%;
-    width: 100%;
-    z-index: 9999; 
+    height: 100vh;
+    width: 100vw;
+    z-index: 9999;
+    display: none;
 }
 
+
+
+.menu-background{
+    height: 100vh;
+    width: 100vw;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity: .98;
+    -webkit-filter: blur(8px);
+  filter: blur(8px);
+}    
+
+.menu-video{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0px;
+    z-index: 2;
+    pointer-events: none;
+}  
+
 b, strong {
-    font-weight: 700
+    font-weight: 700;
+    letter-spacing: -0.02em;
 }
 
 ol, ul {
@@ -46,7 +70,7 @@ ol, ul {
 
 li {
     display: list-item;
-    list-style: none;
+    list222-style: none;
 }
 
 
@@ -77,7 +101,7 @@ q:after, q:before {
 }
 
 small, sub, sup {
-    font-size: 70%;
+    font-size: 50%;
 }
 
 sub, sup {
@@ -91,8 +115,8 @@ sub {
 }
 
 sup {
-    top: -.35em;
-    font-size: 0.75em;
+    top: -.8em;
+    font-size: 0.5em;
 }
 
 svg {
@@ -143,60 +167,313 @@ html {
 }
 
 h1 {
-/*    font-family: "Fearful Harmony", Times New Roman, Times, serif;*/
     font-weight: 300;
-    line-height: 110px;
-    letter-spacing: -5px;
-    font-size: 120px;
-     
-/*
-    font-size: 8.2vw;
-        line-height: 7.2vw;
-*/
+    line-height: 105px;
+    letter-spacing: -.04em;
+    font-size: 110px;
+/*    color: #fff;*/
+
 }
 
 h2 {
-    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-size: 48px;
+    line-height: 60px;
+    font-weight: 300;
+    letter-spacing: -0.02em;
+    word-spacing: -0.12em;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;  
+    text-align: justify;  
     
-    font-weight: 400;
-    font-size: 45px;
+}
+
+h2 span{
+    letter-spacing: -0.12em;
     
 }
 
 h3 {
-    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-weight: 800;
+    line-height: 90px;
+    letter-spacing: -.03em;
+    word-spacing: -.25em;
+    font-size: 85px;    
     }
 
+h3 span{
+    letter-spacing: -0.10em;
+}
+   
+
 h4 {
-    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-    font-size: 20px;
-    line-height: 22px;
-    font-weight: 400;
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 300;
+    letter-spacing: -0.01em;
+    word-spacing: -0.125em;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;  
+    text-align: justify;    
+}
+
+h4 span{
+    padding-left: 100px;
+    position: relative;
+}
+
+.h4-circle {
+    position: absolute;
+    display: inline;
+    float: left;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px; 
+    margin-left: 30px;
+    margin-top: 5px;
+	background: #000;
 }
 
 h5 {
-    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-    font-size: 12em;
-    line-height: 1.4em;
-    font-weight: 700;
+    font-weight: 300;
+    font-size: 11px;
+    letter-spacing: .1px;
+    line-height: 13px;
 }
+   
 
 h6 {
     font-weight: 300;
-    font-size: 12px;
-    letter-spacing: 0px;
+    font-size: 11px;
+    letter-spacing: 0.025em;
+    word-spacing: 0.001em;
     line-height: 14px;
 }
  
 p {
-    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-    font-size: 13em;
-    text-indent: 2em;
-    line-height: 1.3;
+    font-size: 16px;
+    line-height: 20px;
     font-weight: 300;
-    letter-spacing: -0.05px;
+    letter-spacing: 0.005em;
+    word-spacing: 0.0em;
+    text-indent: 50px;
+/*    text-align: justify;*/
+/*
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+*/
+}
+
+.rule{
+    border-top: 2px solid #000;
+    margin-bottom: 2px;
+    width: calc(100% - 50px);
+    left: 50px;
+    position: relative;
+    clear: both;
+    
 }
  
+.menu{
+    left: 15px;
+    width: 100%;
+    position: fixed;
+    top: 15px;
+    z-index: 10;
+}
+
+.fearful-section{
+    margin-top: 150px;
+    border-top: 2px solid #000;
+    padding-top: 0px;
+    top: 0px;
+    left: 0px;
+    position: relative;
+}
+
+.fearful-section2{
+    margin-top:5px;
+/*    border-top: 2px solid #000;*/
+    padding-top: 0px;
+    top: 0px;
+    width: calc(100% - 30px);
+    left: 15px;
+    position: relative;
+}
+
+.fearful-harmony-intro{
+    width: 1150px;
+    left: 50px;
+    position: relative;
+    clear: both;
+    
+}
+
+.fearful-harmony-intro indent{
+    display: block;
+    margin-left: 145px;
+}
+
+.manifesto{
+    width: 1330px;
+    left: 50px;
+    padding-bottom: 50px;
+    position: relative;
+    clear: both;
+}
+
+.manifesto indent{
+    display: block;
+    margin-left: 525px;
+}
+
+.footnote{
+    width: 290px;
+    margin-top: 20px;
+    margin-left: 6px;
+    position: absolute;
+}
+
+
+
+.context-title{
+    width: 330px;
+    margin-left: 50px;
+    float: left;
+    padding-bottom: 5px;
+}
+.visual-language-title{
+    width: 364px;
+    margin-left: 200px;
+    position: relative;
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 5px;
+}
+
+.visual-language-title-2{
+    float: left;
+    width: 360px;
+    position: relative;
+    margin-top: 0px;
+    margin-left: 19px;
+    padding-bottom: 5px;
+}
+
+.context{
+    width: 380px;
+    margin-left: 50px;
+    padding-top: 5px;
+    position: relative; 
+    float: left;
+}
+.visual-language-body{
+    width: 360px;
+    margin-left: 150px;
+    position: relative;
+    float: left;
+    margin-top: -2px;
+    border: 2px solid #000;
+    border-width: 0 2px 0 2px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+}
+
+.visual-language-body-2{
+    float: left;
+    width: 370px;
+    position: relative;
+    margin-top: -2px;
+    margin-left: 15px;
+    padding-top: 5px;
+}
+
+
+.interactive-letterform{
+    width: 100%;
+    position: relative;
+    margin-top: 100px
+    
+}
+
+.letterform{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    left: 50%;
+    -webkit-transform: translate(-50%,-0%);
+    transform: translate(-50%,-0%);  
+    
+}
+
+.letterform img{
+    position: absolute;
+    opacity: 0;
+}
+
+.letterfrom-trigger{
+    position: fixed;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+}
+
+.helvetica{
+    float: left;
+    
+}
+
+.arial{
+    right: 15px;
+    position: absolute;
+}
+
+.download{
+    clear: both;    
+    text-decoration: underline;
+    -webkit-text-decoration-skip: ink;
+    text-decoration-skip: ink;
+    -webkit-text-decoration-color: rgba(0, 0, 0, 0);
+    text-decoration-color: rgba(0, 0, 0, 0);
+}
+
+.letterfrom-trigger div{
+    height: 100vh;
+    width: 6%;
+    float: left;
+}
+
+.letterfrom-trigger div:nth-of-type(1){
+    width: 20%;
+    float: left;
+}
+
+.letterfrom-trigger div:nth-of-type(12){
+    width: 20%;
+    float: left;
+}
+
+
+.letterform-disclaimer{
+    width: 500px;
+}
+
+
+
+
+/*
+.intro h4:nth-of-type(1{
+    float: left;
+}
+  
+*/
+
 p:first-of-type {
     text-indent: 0;
 }
@@ -207,7 +484,7 @@ p:first-of-type {
     src: url('/assets/fonts/Harmony-Bold.woff'); 
     font-style: bold;
     font-weight: 700;
-    }
+    } 
 
 @font-face {
     font-family: 'Harmony';
@@ -223,6 +500,14 @@ p:first-of-type {
 .wrapper{
     overflow-x: hidden;
     overflow-y: hidden;  
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    width: 1440px;
+/*
+  -webkit-filter: blur(8px);
+  filter: blur(8px);
+*/
 }
 
 main {
@@ -237,8 +522,17 @@ main {
     margin-left: 15px;
 /*    background-blend-mode: screen;  */
 }
+
+.indent-big{
+    left: 305px;
+    position: relative;
+    
+}
+
 .indent{
-    margin-left: 300px;
+    margin-left: -2px;
+    left: 150px;
+    position: relative;
 }
 
 .big-circle {
@@ -312,6 +606,7 @@ main {
 .footer h6{
     margin-left: 20px;
 }
+/*
 .circle {
     display: inline;
     float: left;
@@ -320,4 +615,469 @@ main {
 	height: 13px; 
     margin-top: 2px;
 	background: #000;
+}
+*/
+.circle {
+    display: inline;
+    float: left;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px; 
+    margin-left: -2px;
+    margin-top: 10px;
+	background: #000;
+    cursor: pointer;   
+}
+
+.circle:hover {
+    -webkit-animation: pulse 2s infinite ease-in-out; 
+    animation: pulse 2s infinite ease-in-out;    
+}
+
+@-webkit-keyframes pulse {
+    0% { -webkit-transform: scale(1); opacity: 0.9; }
+    50% { -webkit-transform: scale(.9); opacity: 1; }
+    100% { -webkit-transform: scale(1); opacity: 0.9; }
+}
+
+@keyframes pulse {
+    0% { -webkit-transform: scale(1); opacity: 0.9; }
+    50% { -webkit-transform: scale(.9); opacity: 1; }
+    100% { -webkit-transform: scale(1); opacity: 0.9; }
+}
+
+.p-circle {
+    display: inline;
+    float: left;
+	border-radius: 50%;
+	width: 16px;
+	height: 16px; 
+    margin-top: 3px;
+	background: #000;
+    margin-right: 5px;
+}
+
+
+img {
+    height: auto;
+    outline: 0;
+    border: 0;
+    width: 100%;
+    opacity: 1;
+    display: block; 
+    }
+
+img.border {
+    border: 2px solid #000;
+    border-width: 2px 2px 2px 2px;
+}
+
+/*
+img.bw:hover {
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%); }
+
+iframe{
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); }
+
+iframe.bw:hover {
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%); }
+*/
+
+
+
+.project-credit{
+    position: relative;
+    margin-left: 20px;
+    width: 550px;
+    padding-bottom: 150px;
+    padding-top: 10px;
+    clear: both;
+}
+
+.project-credit h3{
+    padding-top: 1px;
+}
+
+.col-3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    float: left;
+    width: 25%;
+    padding: 0 1.5%;
+    min-height: 50rem;
+    margin-bottom: 1.5em;
+    margin-left: -1px;
+    }
+
+@media only screen and (max-width: 768px) {
+.col-3 {
+    width: 50%; } }
+
+@media only screen and (max-width: 600px) {
+.col-3 {
+    min-height: 28rem;
+    width: calc(70% - 0px);
+    padding: 0 0%;
+    margin-left: 10px; } }
+
+.col-6 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    float: left;
+    width: 46%;
+    padding: 0 1.5%;
+    min-height: 58rem;
+    margin-bottom: 1.5em;
+    margin-left: -1px;
+    }
+
+@media only screen and (max-width: 480px) {
+.col-6 {
+    min-height: 28rem;
+    width: calc(100% - 40px);
+    padding: 0 0%;
+    margin-left: 20px; } }
+
+.col-9 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 75%;
+    min-height: 58rem;
+    margin-left: -1px;
+    }
+
+@media only screen and (max-width: 480px) {
+    .col-9 {
+    min-height: 28rem;
+    width: calc(100% - 20px);
+    padding: 0 0%;} }
+
+.col-10 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: calc(100% - 40px);
+    padding: 0 0%;
+    left: 20px;
+    min-height: 58rem;
+    margin-bottom: 1.5rem;
+    margin-left: -1px;
+    }
+
+@media only screen and (max-width: 480px) {
+    .col-10 {
+    min-height: 28rem;
+    width: calc(100% - 40px);
+    padding: 0 0%;
+    left: 20px;} }
+
+.col-12 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: calc(100% - 30px);
+    padding: 0 15px;
+    min-height: 58rem;
+    margin-bottom: 1.5em;
+    margin-left: -2px;
+    }
+
+@media only screen and (max-width: 480px) {
+.col-12 {
+    min-height: 28rem;
+    width: calc(100% - 40px);
+    padding: 0 0%;
+    left: 20px; } }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+footer {
+    clear: both;
+}
+
+
+.footer-context{
+    bottom: 20px;
+    width: 520px;
+    left: 15px;
+    z-index: 5;
+    position: relative;
+    float: left;
+}
+
+.footer-context h6{
+    margin-left: 20px;
+}
+
+.footer-credit{
+    bottom: 20px;
+    width: 520px;
+    left: 150px;
+    float: left;
+    z-index: 5;
+    position: relative;
+}
+
+.footer-credit h6{
+    margin-left: 20px;
+}
+
+
+
+
+
+.static-haze .top-header{
+    padding-left: 60px;
+    margin-left: -30px;    
+}
+
+.static-haze h3{
+    z-index: 100;
+    background: #fff;
+    line-height: 85px;
+    position: relative;
+    float: left;
+    width: 1240px;
+    margin-left: 30px;
+    margin-top: -55px;
+    display: block;
+/*    text-align: center;*/
+    padding-bottom: 60px;
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+}
+
+.static-haze .sub-heading{
+    letter-spacing: -0.025em; 
+    word-spacing: -0.0125em;
+    text-align: left;   
+    margin-top: -50px;
+    float: left; 
+    margin-left: 27px;
+    z-index: 101;
+    position: relative;
+}
+
+.static-haze img{
+    width: 700px;
+    float: right;
+    display: block;
+    position: relative;
+    right: 0px;   
+}
+.ryoji-ikeda-body-copy{
+    margin-right: 60px;   
+}
+
+.static-haze h6{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 375px;
+    float: right; 
+    margin-right: 75px;    
+}
+
+.static-haze p{
+    margin-top: 10px;
+    width: 390px;
+    float: right;
+    right: 0px;  
+}
+
+.static-haze p .small-rule{
+    margin-top: 10px;
+}
+
+.static-haze h4{
+    margin-top: -29px;
+    width: 900px;
+    clear: both;
+    float: right;
+    right: 0px;  
+}
+
+
+
+
+
+
+.ryoji-ikeda h3{
+    position: relative;
+    float: left;
+    width: 600px;
+    margin-left: 60px;
+    display: block;
+}
+
+
+.ryoji-ikeda img{
+    width: 700px;
+    float: right;
+    display: block;
+    position: relative;
+    right: 0px;   
+}
+.ryoji-ikeda-body-copy{
+    margin-right: 60px;   
+}
+
+.ryoji-ikeda h6{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 375px;
+    float: right;
+    margin-right: 15px;   
+}
+
+.small-rule{
+    border-top: 2px solid #000;
+    width: 390px;
+    float: right;
+    margin-top: 2px;
+}
+
+.ryoji-ikeda p{
+    margin-top: 10px;
+    width: 390px;
+    float: right;
+    right: 0px;  
+}
+
+.ryoji-ikeda p .small-rule{
+    margin-top: 10px;
+}
+
+.ryoji-ikeda h4{
+    margin-top: -29px;
+    width: 900px;
+    clear: both;
+    float: right;
+    right: 0px;  
+}
+
+
+.ryoji-ikeda-body-copy2 h6{
+    margin-right: 60px;  
+    clear: both;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 375px;
+    float: right;
+    margin-right: 15px;  
+}
+
+.ryoji-ikeda-body-copy2{
+    clear: both;
+    float: right; 
+/*    margin-top: -25px;*/
+}
+
+.ryoji-ikeda-body-copy2 .small-rule{
+    margin-right: 60px;  
+    clear: both;
+    width: 390px;
+    float: right;
+    margin-right: 0px;  
+}
+
+.ryoji-ikeda-image img{
+    clear: both;
+    width: 386px;
+    right: 0px;
+    margin-top: -2px;
+}
+
+
+.carousel {
+    width: 100%;
+    height: 100%;
+    background: #000;
+    cursor: move;
+    cursor: -webkit-grab;
+    cursor: grab;
+}
+
+.carousel:active {
+    cursor: grabbing;
+    cursor: -webkit-grabbing;
+}
+
+.carousel-cell {
+    width: 100%;
+    position: relative;
+    
+
+}
+
+.carousel .carousel-cell {
+}
+
+.carousel-cell img {
+    display: block;
+    margin-top: 60px;
+    height: calc(100vh - 0px);
+    max-height: calc(100vh - 60px);
+    transition: 1s ease;
+    -webkit-transition: 1s ease;
+    -moz-transition: 1s ease;
+}
+
+
+@media screen and ( min-width: 768px) {
+    .carousel-cell img {
+        height: 100%;
+    }
+    
+}
+
+
+.carousel-cell.is-selected img {
+    opacity: 1;
+    transition: .6s ease;
+    -webkit-transition: .6s ease;
+    -moz-transition: .6s ease;
+}
+
+
+
+.flickity-page-dots {
+    bottom: 40px;
+    right: 40px;
+    position: absolute;
+    z-index: 10;
+}
+
+.flickity-page-dots .dot {
+    float: left;
+    width: 8px;
+    margin-top: 15px;
+    margin-left: 5px;
+    height: 8px;
+    opacity: 1;
+    cursor: pointer;
+    border-radius: 100px;
+    border: 1px solid #777;
+    border-width: 1px 1px 1px 1px;
+}
+
+.flickity-page-dots .dot.is-selected {
+    background: #a89778;
 }
