--- a/styles/main.css
+++ b/styles/main.css
@@ -883,7 +883,8 @@ iframe.bw:hover {
 
 @media only screen and (max-width: 768px) {
 .col-3 {
-    width: 50%; } }
+    width: 50%; } 
+}
 
 @media only screen and (max-width: 600px) {
 .col-3 {
