--- a/styles/media_queries.css
+++ b/styles/media_queries.css
@@ -158,6 +158,7 @@ p {
     left: -200vw;
     top: -100vh;
     height: 200vh;
+    pointer-events: none;
 }
 .mobile-letter{
     display: block;
@@ -564,6 +565,7 @@ p {
     left: -200vw;
     top: -100vh;
     height: 200vh;
+    pointer-events: none;
 }
 .mobile-letter{
     display: block;
@@ -776,7 +778,7 @@ p {
 } 
 .footer-credit{
     margin-right: -10px;
-    padding-bottom: 248px;
+    padding-bottom: 218px;
     width: calc(100% - 20px);
     border-bottom: 2px solid #000;  
 }    
@@ -970,6 +972,7 @@ p {
     left: -200vw;
     top: -100vh;
     height: 200vh;
+    pointer-events: none;
 }
 .mobile-letter{
     display: block;
@@ -1181,7 +1184,7 @@ p {
 } 
 .footer-credit{
     margin-right: -10px;
-    padding-bottom: 285px;
+    padding-bottom: 245px;
     width: calc(100% - 20px);
     border-bottom: 2px solid #000;  
 }    
