--- a/styles/main.css
+++ b/styles/main.css
@@ -30,14 +30,11 @@ body, html {
 /*    overscroll-behavior-y: none;*/
 }
 
-/*
 html.open{
     background-color: #d0d0d0; 
-    
     -webkit-transition: .6s ease;
     transition: .6s ease;
 }
-*/
 
 html.menu{
     overflow-y: hidden !important;
@@ -56,13 +53,11 @@ html.index{
     overflow-y: scroll;
 }
 
-/*
 body.open{
-    background-color: #d0d0d0; 
+    background-color: #fff; 
     -webkit-transition: .6s ease;
     transition: .6s ease;
 }
-*/
 
 article, aside, details, figcaption, figure, footer, header, hgroup,
 menu, nav, section {
@@ -448,8 +443,8 @@ p span{
 /*    pointer-events: none;*/
     -webkit-animation-delay: 1s;
     animation-delay: 1s;
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s;
+    -webkit-animation-duration: 1.3s;
+    animation-duration: 1.3s;
     -webkit-transition-timing-function: ease;
     transition-timing-function: ease;
 /*
@@ -1987,7 +1982,7 @@ svg{
 .ryoji-ikeda-body-copy2{
     clear: both;
     float: right; 
-    margin-top: -37px;
+    margin-top: -74px;
     width: 33.65%;
 }
 
