--- a/styles/main.css
+++ b/styles/main.css
@@ -2029,6 +2029,7 @@ svg{
     clear: both;
     float: right; 
     width: 33.65%;
+    margin-bottom: 5px;
 }
 
 .ryoji-ikeda-body-copy3 .small-rule{
