--- a/styles/main.css
+++ b/styles/main.css
@@ -372,6 +372,14 @@ p span{
     margin-right: 5px;
 }
 
+@font-face {
+    font-family: 'Ouroboros';
+    src: url('/assets/fonts/Ouroboros-Regular.woff'); 
+    src: url('/assets/fonts/Ouroboros-Regular.woff2'); 
+    src: url('/assets/fonts/Ouroboros-Regular.eot');
+    font-style: normal;
+    font-weight: 700;
+    }
 
 @font-face {
     font-family: 'Harmony';
@@ -1040,7 +1048,9 @@ span.tip {
 .big-circle.open {
     opacity: 1;
 }
-
+#fearful-harmony{
+    font-family: "Ouroboros", Georgia, 'Times New Roman', Times, serif;
+}
 #fearful-harmony, #static-haze, #ok-human{
     cursor: pointer;
 }
